--- a/lecture_19_react_chat_firebase_2/package.json
+++ b/lecture_19_react_chat_firebase_2/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
+    "react-firebaseui": "https://gitpkg.now.sh/gvillenave/firebaseui-web-react/dist",
     "react-router-dom": "^7.3.0"
   },
   "devDependencies": {
